<resources>
    <string name="app_name">BattleOfMindsKotlin</string>
    <string name="hello_image">Картинка приветствия</string>
    <string name="bonus_text">BONUS</string>
    <string name="gaming_text">Gaming</string>
    <string name="content_desc">contentDesc</string>
    <string name="vs_text">VS</string>
    <string name="tap_to_start_next_round">Нажмите, чтобы продолжить</string>
    <!-- Шрифт поддерживает en только -->
    <string name="on_end_text_loading">VS</string>
    <string name="title_name_game">Battle\nOf\nMinds</string>
    <string name="name_one_line">Battle Of Minds</string>
    <string name="download_complete">загрузка завершена!</string>
    <string name="desire_emotion_bad_connection_status">Плохое соединение…</string>
    <string name="desire_emotion_bad_connection_action">Пытаемся соединиться…</string>
    <string name="download">загрузка</string>
    <string name="download_start">начинаем загрузку контента…</string>
    <string name="nickname">никнэйм</string>
    <string name="avatar_random_button_text">Выбрать любую</string>
    <string name="avatar_create_button">Создать</string>
    <string name="error_short_nickname">Нужно больше 5 символов!</string>
    <string name="start_game_button">Начать игру</string>
    <string name="statistics_button">Статистика</string>
</resources>
