<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <com.bonusgaming.battleofmindskotlin.ui.GradientText
        android:id="@+id/id_logo_gaming_text"
        style="@style/TextLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/name_one_line"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/button_start"
        style="@style/Card"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_transparent"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_avatar_name">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/start_game_button"
            android:textSize="@dimen/main_button_size" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/button_statistics"
        style="@style/Card"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_transparent"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/statistics_button"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/statistics_button"
            android:textSize="@dimen/main_button_size" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView

        android:id="@+id/cardViewWrap"
        style="@style/CardImage"
        android:layout_width="220dp"
        android:layout_height="220dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:cardElevation="15dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_logo_gaming_text"
        tools:srcCompat="@tools:sample/avatars">

        <ImageView

            android:id="@+id/menu_avatar_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:contentDescription="@string/content_desc"
            android:scaleType="fitCenter" />


    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/menu_avatar_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/modak"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewWrap" />

</androidx.constraintlayout.widget.ConstraintLayout>